# QueueServer

./: .gitignore  CMakeLists.txt  Makefile  queue-server
src/: ClientHandler.cpp  ClientHandler.h  DelimitedProtocol.cpp  DelimitedProtocol.h  HTTPProtocol.cpp  HTTPProtocol.h  HTTPRoute.h  JsonProtocol.cpp  JsonProtocol.h  Logger.h  ParsedMessage.h  Protocol.h  Queue.cpp  Queue.h  QueueManager.cpp  QueueManager.h  Request.h  Response.h  Router.cpp  Router.h  Server.cpp  Server.h  json.cpp  json.h  main.cpp  utils.h
